[tool.poetry]
name = "pfotobooth-bot"
version = "0.1.0"
description = ""
authors = ["Maxim Donchuk <m.donchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.2.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
pytelegrambotapi = "^4.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
